--- a/frontend/src/main/resources/application.yaml
+++ b/frontend/src/main/resources/application.yaml
@@ -1,5 +1,23 @@
 spring:
   application:
     name: frontend
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: lille-chat-frontend
+            scope: openid,profile,email
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+        provider:
+          keycloak:
+            authorization-uri: ${KEYCLOAK_AUTH_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/auth}
+            token-uri: ${KEYCLOAK_TOKEN_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/token}
+            jwk-set-uri: ${KEYCLOAK_JWK_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/certs}
+            user-info-uri: ${KEYCLOAK_USERINFO_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/userinfo}
+            user-name-attribute: preferred_username
 vaadin:
   launch-browser: true
+lille-chat:
+  backend-url: ${LILLE_CHAT_BACKEND_URL:http://localhost:8080}
