--- a/frontend/src/main/resources/application.yaml
+++ b/frontend/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
         registration:
           keycloak:
             client-id: lille-chat-frontend
+            client-authentication-method: none
             scope: openid,profile,email
             authorization-grant-type: authorization_code
             redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
@@ -15,7 +16,6 @@ spring:
             authorization-uri: ${KEYCLOAK_AUTH_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/auth}
             token-uri: ${KEYCLOAK_TOKEN_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/token}
             jwk-set-uri: ${KEYCLOAK_JWK_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/certs}
-            user-info-uri: ${KEYCLOAK_USERINFO_URI:http://localhost:8180/realms/lille-chat/protocol/openid-connect/userinfo}
             user-name-attribute: preferred_username
 vaadin:
   launch-browser: true
