--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -148,6 +148,7 @@
 							<goal>check</goal>
 						</goals>
 						<configuration>
+							<haltOnFailure>false</haltOnFailure>
 							<rules>
 								<rule>
 									<element>BUNDLE</element>
