Removed SpotBugs and added pmd

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -100,15 +100,13 @@ jobs:
           path: backend/target/checkstyle-result.xml
           retention-days: 7
 
-      - name: Run SpotBugs
-        run: ./mvnw compile spotbugs:spotbugs -B
-        continue-on-error: true
+      - name: Run PMD
+        run: ./mvnw pmd:pmd -B
 
-      - name: Upload SpotBugs report
+      - name: Upload PMD report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: spotbugs-report
-          path: backend/target/spotbugsXml.xml
+          name: pmd-report
+          path: backend/target/pmd.xml
           retention-days: 7
-          if-no-files-found: ignore
