--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -98,7 +98,22 @@ jobs:
         with:
           name: checkstyle-report
           path: backend/target/checkstyle-result.xml
+
+      - name: OWASP Dependency-Check
+        run: ./mvnw dependency-check:check -B
+        env:
+          NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
+
+      - name: Upload OWASP Dependency-Check report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: owasp-dependency-check-report
+          path: backend/target/dependency-check/
           retention-days: 7
+
+      - name: Check for dependency updates
+        run: ./mvnw versions:display-dependency-updates versions:display-plugin-updates -B
 
       - name: Run PMD
         run: ./mvnw pmd:pmd -B
