--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -100,9 +100,7 @@ jobs:
           path: backend/target/checkstyle-result.xml
 
       - name: OWASP Dependency-Check
-        run: ./mvnw dependency-check:check -B
-        env:
-          NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
+        run: ./mvnw dependency-check:check -B -DnvdApiKey=${{ secrets.NVD_API_KEY }}
 
       - name: Upload OWASP Dependency-Check report
         uses: actions/upload-artifact@v4
